# example-codebases

./: README.md
expense-tracker/: pyproject.toml
expense-tracker/src/: database.py  expense_manager.py  file_handler.py  finance.py  main.py  validator.py
expense-tracker/tests/: test_database.py  test_expense_manager.py  test_file_handler.py  test_finance.py  test_validator.py
library-manager/: pyproject.toml  requirements.txt
library-manager/src/: books.py  database.py  library.py  main.py  reports.py  transactions.py  users.py  utils.py
library-manager/tests/: test_database.py  test_library.py  test_reports.py  test_transactions.py  test_users.py  test_utils.py  tets_books.py
work-manager/: pyproject.toml
work-manager/src/: database.py  employees.py  main.py  payroll.py  reports.py
work-manager/tests/: test_employees.py  test_payroll.py  test_reports.py
