[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense_tracker"
version = "0.1.0"
description = "A simple CLI-based expense tracker with unit tests"
authors = [{ name = "Swasti Jain", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pytest"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
